--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<script src="libreries/jQuery.js"></script>
-	<link rel="stylesheet" href="css.css">
+	<script src="libreries/p5/p5.js"></script>
+	<link rel="stylesheet" href="stile.css">
 	
 </head>
 <body>
-	<canvas width="700" height="300" id="finestra"></canvas>
-	<script src="mappa.js"></script>
+	<script src="script.js"></script>
 </body>
 </html>
