--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 	<script src="libreries/jQuery.js"></script>
 	<script src="libreries/p5/p5.js"></script>
 	<link rel="stylesheet" href="stile.css">
-	
+
 </head>
 <body>
 	<script src="Player.js"></script>
+	<script src="Obstacle.js"></script>
 	<script src="script.js"></script>
 </body>
 </html>
