added difficulty and counter

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 	<script src="Player.js"></script>
 	<script src="Obstacle.js"></script>
 	<script src="script.js"></script>
+	<p id="counter"></p>
 </body>
 </html>
