codice ordinato e ottimizzato

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<script src="Player.js"></script>
 	<script src="Obstacle.js"></script>
 	<script src="script.js"></script>
-	<p id="counter"></p>
+	<p id="counter">lel</p>
+	
 </body>
 </html>
+     
