--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 	<script src="Player.js"></script>
 	<script src="Obstacle.js"></script>
+	<script src="Proiettile.js"></script>
 	<script src="script.js"></script>
 	<p id="counter">lel</p>
 	
