--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
 
 </head>
 <body>
-	<script src="Player.js"></script>
-	<script src="Obstacle.js"></script>
-	<script src="Proiettile.js"></script>
+	<script src="objects/Player.js"></script>
+	<script src="objects/Obstacle.js"></script>
+	<script src="objects/Proiettile.js"></script>
+	<script src="objects/Enemy.js"></script>
 	<script src="script.js"></script>
 	<p id="counter">lel</p>
-	
 </body>
 </html>
-     
