--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
 	<script src="libreries/jQuery.js"></script>
 	<script src="libreries/p5/p5.js"></script>
 	<link rel="stylesheet" href="stile.css">
@@ -12,6 +13,6 @@
 	<script src="objects/Proiettile.js"></script>
 	<script src="objects/Enemy.js"></script>
 	<script src="script.js"></script>
-	<p id="counter">lel</p>
+	<p id="counter">0</p>
 </body>
 </html>
