--- a/index.html
+++ b/index.html
@@ -4,15 +4,24 @@
 	<meta charset="UTF-8">
 	<script src="libreries/jQuery.js"></script>
 	<script src="libreries/p5/p5.js"></script>
+	<script src="libreries/p5.collide2d.min.js"></script>
 	<link rel="stylesheet" href="stile.css">
-
+	<title></title>
 </head>
 <body>
+
 	<script src="objects/Player.js"></script>
 	<script src="objects/Obstacle.js"></script>
 	<script src="objects/Proiettile.js"></script>
 	<script src="objects/Enemy.js"></script>
 	<script src="script.js"></script>
-	<p id="counter">0</p>
+	
+	<div id="fine"></div>
+
+	<script>
+		function replay(){
+			location.reload();
+		}
+	</Script>
 </body>
 </html>
