--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -14,8 +15,10 @@
 	<script src="objects/Obstacle.js"></script>
 	<script src="objects/Proiettile.js"></script>
 	<script src="objects/Enemy.js"></script>
+	<script src="objects/Background.js"></script>
+
 	<script src="script.js"></script>
-	
+
 	<div id="fine"></div>
 
 	<script>
