--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<script src="libreries/jQuery.js"></script>
 	<script src="libreries/p5/p5.js"></script>
 	<script src="libreries/p5.collide2d.min.js"></script>
+	<script src="libreries/p5.play.js"></script>
+
+
 	<link rel="stylesheet" href="stile.css">
 	<title></title>
 </head>
