good player sprites (finally)

--- a/index.html
+++ b/index.html
@@ -20,28 +20,21 @@
 
 	<script src="script.js"></script>
 
-	<div id="fine">
-		<div id="sopra" >
-		<div id="sopra2">
+		<div id="all">
+		<div id="sopra">
 			<div id="attuale">
-				<img src="" >
-				<div id="tot"> 
-				<img src="img/trophy.png" id="trofeo" >
-					<!-- inserire punteggio attuale-->
-				</div> <!-- inserire il punteggio che ha fatto in questa sessione di gioco -->
+				<p class="punteggio"> </p>
 			</div>
 			<div id="record">
-				<img src="img/trophy.png" id="trofeo" >
-				<div id="myRecord"> </div><!-- qui aggiungi il record dell utente salvato in memoria -->
+				<img src="img/trophy.png" id="trophy">
+				<p class="punteggio"> prova</p>
 			</div>
-			<!-- inserire immagine personaggio -->
 		</div>
-		
-		<div id="playAgain" onclick="setup()">
-			 <img id="refresh" src="img/refresh.png" /><h2>Gioca ancora</h2>
-		</div>
-	</div>
-	<p id="counter">0</p>
+		 <div id="playAgain" onclick="setup()">
+			<img id="refresh" src="img/refresh.png">
+			<h2>Gioca ancora</h2>
+		</div> 
+		<p id="counter">0</p>
 	</div>
 
 </body>
