--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,8 +5,9 @@
 	<script src="libreries/jQuery.js"></script>
 	<script src="libreries/p5/p5.js"></script>
 	<script src="libreries/p5.collide2d.min.js"></script>
-
-	<link rel="stylesheet" href="stile.css">
+	<title>MegaRun</title>
+	<link rel="icon" href="img/favicon.ico" />
+	<link href="css/stile.css" rel="stylesheet" type="text/css">
 	<title></title>
 </head>
 <body>
@@ -17,24 +17,30 @@
 	<script src="objects/Proiettile.js"></script>
 	<script src="objects/Enemy.js"></script>
 	<script src="objects/Background.js"></script>
-
+	
 	<script src="script.js"></script>
-
-		<div id="all">
-		<div id="sopra">
+	<img src="img/title.png" id="title"/>
+	
+	<div id="sopra" >
+		<div id="sopra2">
 			<div id="attuale">
-				<p class="punteggio"> </p>
+				<img src="" >
+				<div id="tot"> 
+				<img src="img/trophy.png" id="trofeo" >
+					<!-- inserire punteggio attuale-->
+				</div> <!-- inserire il punteggio che ha fatto in questa sessione di gioco -->
 			</div>
 			<div id="record">
-				<img src="img/trophy.png" id="trophy">
-				<p class="punteggio"> prova</p>
+				<img src="img/trophy.png" id="trofeo" >
+				<div id="myRecord"> </div><!-- qui aggiungi il record dell utente salvato in memoria -->
 			</div>
+			<!-- inserire immagine personaggio -->
 		</div>
-		 <div id="playAgain" onclick="setup()">
-			<img id="refresh" src="img/refresh.png">
-			<h2>Gioca ancora</h2>
-		</div> 
-		<p id="counter">0</p>
+		
+		<div id="playAgain" onclick="setup()"> <!-- funzione da finire -->
+			<img id="refresh" src="img/refresh.png" /><h2>Gioca ancora</h2>
+		 </div> 
+	</div>
 	</div>
 
 </body>
