--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 	<title>MegaRun</title>
 	<link rel="icon" href="img/favicon.ico" />
 	<link href="css/stile.css" rel="stylesheet" type="text/css">
-	<title></title>
 </head>
 <body>
 
@@ -17,31 +16,45 @@
 	<script src="objects/Proiettile.js"></script>
 	<script src="objects/Enemy.js"></script>
 	<script src="objects/Background.js"></script>
-	
 	<script src="script.js"></script>
+
 	<img src="img/title.png" id="title"/>
-	
-	<div id="sopra" >
-		<div id="sopra2">
+	<!-- risorse audio !-->
+	<audio id='bgmusic' controls autoplay='true' hidden='hidden' loop='true' >
+		<source src='sound/Temple_run.mp3' type='audio/mp3'>
+	</audio>
+	<audio id='jumpfx'>
+		<source src='sound/jump.wav' type='audio/wav'>
+	</audio>
+	<audio id='shootfx' >
+		<source src='sound/laser.wav' type='audio/wav'>
+	</audio>
+	<audio id='pickupfx'>
+		<source src='sound/pickup.wav' type='audio/wav'>
+	</audio>
+	<audio id='hitfx'>
+		<source src='sound/hit.wav' type='audio/wav'>
+	</audio>
+	<!-- div di fine gioco !-->
+	<div id="sopra">
 			<div id="attuale">
-				<img src="" >
-				<div id="tot"> 
-				<img src="img/trophy.png" id="trofeo" >
+				<img src="img/giocatore.png" id="giocatore" >
+				<div  id="att">
+
 					<!-- inserire punteggio attuale-->
-				</div> <!-- inserire il punteggio che ha fatto in questa sessione di gioco -->
+				</div>
 			</div>
 			<div id="record">
 				<img src="img/trophy.png" id="trofeo" >
-				<div id="myRecord"> </div><!-- qui aggiungi il record dell utente salvato in memoria -->
+				<div  id="rec"> </div><!-- qui aggiungi il record dell utente salvato in memoria -->
 			</div>
 			<!-- inserire immagine personaggio -->
 		</div>
-		
+
 		<div id="playAgain" onclick="setup()"> <!-- funzione da finire -->
-			<img id="refresh" src="img/refresh.png" /><h2>Gioca ancora</h2>
-		 </div> 
-	</div>
-	</div>
+			 <img id="refresh" src="img/refresh.png" /><h2>Gioca ancora</h2>
+		 </div>
+
 
 </body>
 </html>
